# webfejl

./: .env  Cargo.toml  diesel.toml
migrations/2024-12-15-070306_stars_init/: down.sql  up.sql
migrations/2024-12-15-120224_stars_init/: up.sql
migrations/2024-12-18-200157_create_constellations/: down.sql  up.sql
migrations/2024-12-18-205613_foreign_key_on_constellations/: down.sql  up.sql
public/: index.css  index.html  index.js
src/: claims.rs  controller.rs  diesel_test.rs  entity.rs  main.rs  models.rs  repository.rs  schema.rs
src/controller/: auth.rs  constellation.rs  star.rs
src/entity/: constellation.rs  star.rs
src/repository/: constellations.rs  stars.rs
